# x-x

./: .conform.yaml  .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  TRADEMARKS.md  Taskfile.yml  agents.go  agents_test.go  browser.go  browser_test.go  config_merge.go  constants.go  constants_e2e_test.go  go.mod  go.sum  init.go  init_test.go  lefthook.yml  main.go  main_test.go  plan.go  plan_test.go  scope.go  scope_test.go  server.go  server_test.go  settings.json  skill.go  skill_test.go  telemetry.go  telemetry_test.go  update.go  update_test.go  work_items.go  work_items_test.go
skills-evals/: .gitignore  README.md  litellm_proxy_hooks.py  pyproject.toml
skills-evals/scenarios/: claude-deepseek-baseline.md
skills-evals/tests/: conftest.py  test_claude_hooks_fire.py  test_claude_plan_extends.py  test_claude_reminders_supersedes_todo.py  test_claude_scope_extends.py  test_claude_stream_json_smoke.py  test_claude_todo.py  test_claude_work_item_extends.py  test_cline_plan_extends.py  test_cline_reminders_supersedes_todo.py  test_cline_scope_extends.py  test_cline_stream_smoke.py  test_cline_todo.py  test_cline_work_item_extends.py  test_codex_plan_extends.py  test_codex_reminders_supersedes_todo.py  test_codex_smoke.py  test_codex_todo.py  test_copilot_plan_extends.py  test_copilot_reminders_supersedes_todo.py  test_copilot_scope_extends.py  test_copilot_stream_smoke.py  test_copilot_todo.py  test_copilot_work_item_extends.py  test_kilo_plan_extends.py  test_kilo_reminders_supersedes_todo.py  test_kilo_stream_smoke.py  test_kilo_todo.py  (+23 more)
(+270 files in other folders)
