[project]
name = "skills-evals"
version = "0.1.0"
description = "LLM-judged evaluations for x-x planner/executor skills."
requires-python = ">=3.10"
dependencies = [
  "deepeval>=2.0.0",
  "openai>=1.50.0",
]

[project.scripts]
skills-evals = "skills_evals.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_evals"]
